--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting rag.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile rag.py\n",
     "import streamlit as st\n",
@@ -17,7 +25,7 @@
     "\n",
     "# App config\n",
     "st.set_page_config(page_title=\"Streaming bot\", page_icon=\"🤖\")\n",
-    "st.title(\"PredixionAI ChatBot\")\n",
+    "st.title(\"ERP ChatBot\")\n",
     "\n",
     "llm = ChatMistralAI(\n",
     "    model=\"mistral-large-latest\",\n",
@@ -72,7 +80,7 @@
     "# Chatbot session state initialization\n",
     "if \"chat_history\" not in st.session_state:\n",
     "    st.session_state.chat_history = [\n",
-    "        AIMessage(content=\"Hello, I am from PredixionAI. How can I help you?\"),\n",
+    "        AIMessage(content=\"Hello, I am from ERP. How can I help you?\"),\n",
     "    ]\n",
     "\n",
     "# Conversation handling\n",
@@ -97,17 +105,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\n",
+      "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
+      "\u001b[0m\n",
+      "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
+      "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://192.168.29.132:8501\u001b[0m\n",
+      "\u001b[0m\n",
+      "\u001b[34m\u001b[1m  For better performance, install the Watchdog module:\u001b[0m\n",
+      "\n",
+      "  $ xcode-select --install\n",
+      "  $ pip install watchdog\n",
+      "            \u001b[0m\n",
+      "/Users/ajaymadhavan/Downloads/Hack-Ai-thon/rag.py:20: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding_function = SentenceTransformerEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+      "/Users/ajaymadhavan/Downloads/Hack-Ai-thon/rag.py:21: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "  embedded_db = Chroma(persist_directory=\"./chroma_db\", embedding_function=embedding_function)\n",
+      "2025-03-22 23:28:45.371 Examining the path of torch.classes raised:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/streamlit/web/bootstrap.py\", line 345, in run\n",
+      "    if asyncio.get_running_loop().is_running():\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "RuntimeError: no running event loop\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/streamlit/watcher/local_sources_watcher.py\", line 217, in get_module_paths\n",
+      "    potential_paths = extract_paths(module)\n",
+      "                      ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/streamlit/watcher/local_sources_watcher.py\", line 210, in <lambda>\n",
+      "    lambda m: list(m.__path__._path),\n",
+      "                   ^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/torch/_classes.py\", line 13, in __getattr__\n",
+      "    proxy = torch._C._get_custom_class_python_wrapper(self.name, attr)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "RuntimeError: Tried to instantiate class '__path__._path', but it does not exist! Ensure that it is registered via torch::class_\n",
+      "2025-03-22 23:29:52.238 Examining the path of torch.classes raised:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/streamlit/web/bootstrap.py\", line 345, in run\n",
+      "    if asyncio.get_running_loop().is_running():\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "RuntimeError: no running event loop\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/streamlit/watcher/local_sources_watcher.py\", line 217, in get_module_paths\n",
+      "    potential_paths = extract_paths(module)\n",
+      "                      ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/streamlit/watcher/local_sources_watcher.py\", line 210, in <lambda>\n",
+      "    lambda m: list(m.__path__._path),\n",
+      "                   ^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/ajaymadhavan/Downloads/Hack-Ai-thon/venv/lib/python3.12/site-packages/torch/_classes.py\", line 13, in __getattr__\n",
+      "    proxy = torch._C._get_custom_class_python_wrapper(self.name, attr)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "RuntimeError: Tried to instantiate class '__path__._path', but it does not exist! Ensure that it is registered via torch::class_\n"
+     ]
+    }
+   ],
    "source": [
     "!streamlit run rag.py"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
